src/test/ui/non-exhaustive/non-exhaustive-float-range-match.stderr
error[E0004]: non-exhaustive patterns: `_` not covered
  --> $DIR/non-exhaustive-float-range-match.rs:10:11
   |
LL |     match 0.0 {
   |           ^^^ pattern `_` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
